<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_store"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cost_of_service"
        app:layout_constraintBottom_toBottomOf="@id/cost_of_service"
        />

    <ImageView
        android:id="@+id/icon_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_room_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/service_question"
        app:layout_constraintBottom_toBottomOf="@id/service_question"/>

    <ImageView
        android:id="@+id/icon_round_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_round_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/round_up_switch"
        app:layout_constraintBottom_toBottomOf="@id/round_up_switch"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cost_of_service"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/cost_of_service"
        android:layout_margin="16dp"
        app:layout_constraintStart_toEndOf="@id/icon_store"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_of_service_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>
<!--whenever we will use start after layout it means that we are -->
<!--defining its horizontal layout for vertical we will use Top -->

    <TextView
        android:id="@+id/service_question"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/how_was_the_service"
        app:layout_constraintStart_toEndOf="@id/icon_service"
        app:layout_constraintTop_toBottomOf="@+id/cost_of_service"
        style="@style/Widget.TipCalculator.TextView"
        />
    <RadioGroup
        style="@style/Widget.TipCalculator.CompoundButton.RadioButton"
        android:checkedButton="@id/option_20_percent"
        android:id="@+id/tip_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/service_question"
        app:layout_constraintTop_toBottomOf="@id/service_question"
        >
        <RadioButton
            style="@style/Widget.TipCalculator.CompoundButton.RadioButton"
            android:id="@+id/option_20_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20"
            >

        </RadioButton>

        <RadioButton
            style="@style/Widget.TipCalculator.CompoundButton.RadioButton"
            android:id="@+id/option_18_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_18">

        </RadioButton>

        <RadioButton
            style="@style/Widget.TipCalculator.CompoundButton.RadioButton"
            android:id="@+id/option_15_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_15">

        </RadioButton>



    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        style="@style/Widget.TipCalculator.CompoundButton.Switch"
        android:id="@+id/round_up_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/round_up_tip1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/service_question"
        app:layout_constraintTop_toBottomOf="@id/tip_option"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tip_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/Widget.TipCalculator.TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_button"
        tools:text="Tip Amount: $10" />




    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/calculate_button"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/round_up_switch"
        app:layout_constraintTop_toBottomOf="@id/round_up_switch"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/calculate"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>